# animation_vids

./: .gitignore  README.md  app.cfg.example  example_batch.py  example_multiple_dots.py  example_single.py  example_with_config_file.py  generate_random_vid.py  manim.cfg  manim_attribute_details.md  pyproject.toml  requirements.txt
animations/: __init__.py  app.cfg  audio_mixer.py  audio_utils.py  bounce.py  bouncing_dot.py  bouncing_dots.py  config.py  constants.py  main.py  physics.py
docs/: API_REFERENCE.md  CONFIGURATION.md  TROUBLESHOOTING.md
extras/: bounce.py  bounce_backup.py  question.py  scene.py  visualize_ambient_waves.py
outputs/Procedural Zen #100/: metadata.json
outputs/Procedural Zen #101/: metadata.json
outputs/Procedural Zen #102/: metadata.json
outputs/Procedural Zen #103/: metadata.json
outputs/Procedural Zen #104/: metadata.json
outputs/Procedural Zen #105/: metadata.json
outputs/Procedural Zen #106/: metadata.json
outputs/Procedural Zen #107/: metadata.json
outputs/Procedural Zen #108/: metadata.json
outputs/Procedural Zen #109/: metadata.json
outputs/Procedural Zen #110/: metadata.json
outputs/Procedural Zen #111/: metadata.json
outputs/Procedural Zen #112/: metadata.json
outputs/Procedural Zen #113/: metadata.json
outputs/Procedural Zen #114/: metadata.json
outputs/Procedural Zen #115/: metadata.json
outputs/Procedural Zen #116/: metadata.json
outputs/Procedural Zen #117/: metadata.json
outputs/Procedural Zen #118/: metadata.json
outputs/Procedural Zen #119/: metadata.json
(+171 files in other folders)
